<resources>
    <string name="app_name">Sipeci</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Reportar Incidencia</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reporte_r_pido">Reporte rápido</string>
    <string name="reporte_detallado">Reporte detallado</string>

    <string name="titlulo_pickers">Obtener fecha y hora</string>

    <string name="format_date">dd/mm/yyyy</string>
    <string name="format_time">hh:mm     </string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="usar_mi_ubicaci_n">Usar mi ubicación</string>
    <string name="title_activity_maps">Map</string>
    <string name="location">Ubicación</string>
    <string name="send">Confirmar</string>
    <string name="description">Descripción (Opcional)</string>
    <string name="reportar">Reportar</string>
    <string name="ConsultarZ">Consultar Zona</string>
    <string name="ConsultarR">Consultar Ruta</string>
    <string name="sobre">Acerca de</string>
</resources>
