<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkedButton="@id/fast_report">

                    <RadioButton
                        android:id="@+id/fast_report"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reporte_r_pido"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/details_report"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reporte_detallado"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp" />
                </RadioGroup>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@android:drawable/divider_horizontal_textfield" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="Tipo de Incidencia"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp" />

                <Spinner
                    android:id="@+id/list_incidents"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/date_report"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:enabled="false"
                    android:hint="@string/format_date"
                    android:maxLength="11"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/get_date"
                        style="@android:style/Widget.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:background="?android:attr/colorFocusedHighlight"
                        android:src="@android:drawable/ic_menu_today" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/time_report"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:enabled="false"
                    android:hint="hh:mm          "
                    android:maxLength="11"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/get_time"
                        style="@android:style/Widget.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:background="?android:attr/colorFocusedHighlight"
                        android:src="@android:drawable/ic_menu_recent_history" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/check_my_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/usar_mi_ubicaci_n" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/search"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:hint="@string/location"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp" />

                    <ImageButton
                        android:id="@+id/btn_go"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/search"
                        android:layout_alignEnd="@id/search"
                        android:layout_alignRight="@id/search"
                        android:layout_alignTop="@+id/search"
                        tools:src="@android:drawable/ic_menu_send" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:addStatesFromChildren="true"
                    android:keepScreenOn="true"
                    android:scrollbars="horizontal">

                    <FrameLayout
                        android:id="@+id/map_location"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="5dp" />
                    <!--android:name="com.google.android.gms.maps.SupportMapFragment"-->
                </RelativeLayout>

                <EditText
                    android:id="@+id/optional"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="100dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:ems="10"
                    android:hint="@string/description"
                    android:inputType="textMultiLine"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/send"
        style="@style/tw__ComposerTweetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/send" />
</RelativeLayout>